# outOfSpaceShaders

./: CMakeLists.txt  README.md  run.sh
src/: barycentric.cpp  camera.h  colors.h  earthShader.h  fragment.h  framebuffer.cpp  framebuffer.h  main.cpp  noise.h  print.h  shaders.h  triangleFill.cpp  triangleFill.h  triangles.cpp  triangles.h
